compiler/testData/diagnostics/tests/script/ComplexScript.kts
// FIR_IDENTICAL
fun foo(<!UNUSED_PARAMETER!>x<!>: Int) = 1

val y = 2

foo(y)
